# summary

./: .gitignore  GREEDY_ALGORITHM.md  README.md  VISUALIZATION_CHANGES.md  format.template.json  main.py  pyproject.toml
.github/workflows/: check-pr.yml
dev/: snake_detector.py  visualize_snake_graph.py  visualize_snakes.py  visualizer.py
docs/: DEVELOPMENT.md
scripts/: analyze_edges.py  analyze_retention.py  visualize.py  visualize_snake_graph.py
summary/: __init__.py  cli.py  cognitive_chunk.py  extractor.py  llm.py  main.py  snake_detector.py  snake_summarizer.py  summation.py  text.py  text_chunker.py  wave_reflection.py  working_memory.py
summary/data/: extraction_prompt.jinja  prompt.jinja
summary/data/editor/: clue_reviewer.jinja  clue_reviewer_generator.jinja  text_compressor.jinja  thread_reviewer.jinja  thread_reviewer_generator.jinja  thread_weight_evaluator.jinja
summary/data/intention/: chunk_extraction.jinja
summary/data/topologization/: book_coherence_extraction.jinja  chunk_extraction.jinja  snake_summary.jinja  user_focused_extraction.jinja
summary/editor/: __init__.py  clue.py  compress.py  markup.py
summary/epub/: __init__.py  reader.py  writer.py
summary/topologization/: __init__.py  api.py  chunk_extraction.py  cognitive_chunk.py  core.py  database.py  edge_importance.py  enums.py  extractor.py  fragment.py  fragment_grouping.py  graph.py  graph_weights.py  main.py  snake_detector.py  snake_graph_builder.py  snake_summarizer.py  storage.py  text_chunker.py  text_fragmenter.py  topologize.py  wave_reflection.py  working_memory.py
tests/assets/: 明朝那些事儿.epub
