[project]
name = "summary"
version = "0.1.0"
description = "A summary tool"
keywords = ["summary", "python"]
authors = [
    {name = "Tao Zeyu", email = "i@taozeyu.com"}
]
maintainers = [
    {name = "Tao Zeyu", email = "i@taozeyu.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "jinja2 (>=3.1.6,<4.0.0)",
    "spacy (>=3.8.11,<4.0.0)",
    "openai (>=2.15.0,<3.0.0)",
    "networkx (>=3.0,<4.0)",
]

[project.urls]
Homepage = "https://github.com/moskize91/summary"
Repository = "https://github.com/moskize91/summary"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.poetry.group.dev.dependencies]
pylint = ">=3.3.7,<4.0.0"
tqdm = ">=4.67.1,<5.0.0"
ruff = ">=0.14.10,<1.0.0"
pytest = ">=9.0.2,<10.0.0"
pyright = ">=1.1.407,<2.0.0"
graphviz = ">=0.20.0,<1.0.0"
